# swe-rl-forge-lite

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  start.ps1
.github/workflows/: ci.yml
examples/: tasks.yaml
forge/: __init__.py  cli.py  config.py  dashboard.py  dashboard_live.py  docker_runner.py  explorer.py  git_utils.py  github_pr.py  llm_review.py  patch_utils.py  quality_report.py  reward_runner.py  task_builder.py  task_schema.py  test_report.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
scripts/: demo.ps1  demo.sh
tests/: test_cli.py  test_config.py  test_dashboard.py  test_dashboard_live.py  test_docker_runner.py  test_explorer.py  test_git_utils.py  test_github_pr.py  test_llm_review.py  test_patch_utils.py  test_quality_report.py  test_reward_rollout.py  test_reward_runner.py  test_task_builder.py  test_task_schema.py  test_test_report.py  test_verify_task.py
