[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "swe-rl-forge-lite"
version = "0.1.0"
description = "A lightweight framework for turning historical GitHub PRs into reproducible SWE RL/evaluation tasks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "swe-rl-forge-lite contributors" }
]
keywords = ["software-engineering", "reinforcement-learning", "evaluation", "coding-agents", "github"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "pydantic>=2.6",
  "PyYAML>=6.0.1",
  "requests>=2.31",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
forge = "forge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["forge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]